--- a/addons/website_event_meet/views/event_meet_templates_list.xml
+++ b/addons/website_event_meet/views/event_meet_templates_list.xml
@@ -29,7 +29,7 @@
     <div t-attf-class="col-12 {{meeting_rooms and' col-lg-8 col-xl-9 pe-xxl-5'}}">
         <t t-call="website_event.navbar"/>
         <div class="d-flex flex-row flex-wrap gap-2 pt-3 justify-content-between mb-2">
-            <h3 class="mb-0">Join a room</h3>
+            <h3 class="my-0 lh-1">Join a room</h3>
             <div class="dropdown">
                 <a class="dropdown-toggle btn btn-light" title="Languages Menu"
                     aria-label="Dropdown menu" data-bs-display="static" data-bs-toggle="dropdown" href="#" role="button">
@@ -169,7 +169,7 @@
     <div class="d-lg-flex justify-content-end col-lg-4 col-xl-3 mb-3 mb-lg-0">
         <div class="o_wevent_community_aside mt-3">
             <div class="d-none d-md-block mb-4" t-if="event.meeting_room_allow_creation">
-                <h4 class="o_page_header">Start a topic</h4>
+                <h4 class="o_page_header h6">Start a topic</h4>
                 <p>Want to create your own discussion room?</p>
                 <a href="#" role="button"
                     class="btn btn-secondary o_wevent_create_room_button w-100"
