--- a/addons/website_event_meet/views/event_meet_templates_page.xml
+++ b/addons/website_event_meet/views/event_meet_templates_page.xml
@@ -103,9 +103,9 @@
 <template id="meeting_room_aside" name="Meeting Room: Aside">
     <div t-att-class="'o_wevent_online_page_aside col-12 mt-3 ps-0 pe-0 border %s' % ('col-lg-3 col-xl-2' if option_widescreen else 'col-lg-4 col-xl-3')">
         <div class="o_wevent_online_page_aside_content">
-            <div class="d-flex align-items-center justify-content-between me-2">
-                <h5 class="m-3">Other Rooms</h5>
-                <a href="#collapse_meet_room_aside" data-bs-toggle="collapse" class="d-lg-none p-2 text-decoration-none o_wevent_online_page_aside_collapse collapsed">
+            <div class="d-flex align-items-center justify-content-between pe-3 text-bg-light me-2">
+                <h5 class="m-3 fs-6">Other Rooms</h5>
+                <a href="#collapse_meet_room_aside" data-bs-toggle="collapse" class="d-lg-none p-2 text-decoration-none o_wevent_online_page_aside_collapse collapsed text-reset">
                     <i class="oi oi-chevron-down d-lg-none"/>
                 </a>
             </div>
