--- a/addons/website_event_booth/views/event_booth_registration_templates.xml
+++ b/addons/website_event_booth/views/event_booth_registration_templates.xml
@@ -14,7 +14,7 @@
                 <input type="hidden" name="booth_category_id" t-att-value="booth_category.id"/>
                 <input type="hidden" name="event_booth_ids" t-att-value="event_booths.ids"/>
                 <div id="o_wbooth_contact_details">
-                    <h4>Contact Details</h4>
+                    <h4 class="h5 my-3">Contact Details</h4>
                     <div class="row mb-3">
                         <label class="col-form-label col-sm-auto">
                             <span>Name</span>
