--- a/addons/website_event_exhibitor/views/event_exhibitor_templates_list.xml
+++ b/addons/website_event_exhibitor/views/event_exhibitor_templates_list.xml
@@ -222,8 +222,8 @@
 <!-- Exhibitors: Cards-based display -->
 <template id="exhibitors_display_cards" name="Exhibitors Cards">
     <div t-foreach="sponsor_categories" t-as="sponsor_category" class="row mb-3">
-        <div class="col-12 mb-3">
-            <h4 class="m-0" t-out="sponsor_category['sponsorship'].name"/>
+        <div class="col-12 mt-3 mb-2">
+            <h4 class="h5 m-0" t-out="sponsor_category['sponsorship'].name"/>
         </div>
         <div t-foreach="sponsor_category['sponsors']" t-as="sponsor" class="col-md-6 col-lg-3 mb-4">
             <t t-call="website_event_exhibitor.exhibitor_card"/>
@@ -265,7 +265,7 @@
                 <main class="card-body">
                     <!-- Title -->
                     <h5 class="card-title d-flex align-items-start justify-content-between mt-0 mb-0">
-                        <span t-field="sponsor.name" itemprop="name" class="text-break"/>
+                        <span t-field="sponsor.name" itemprop="name" class="text-break fs-6 mb-2"/>
                         <span t-if="sponsor.is_in_opening_hours and sponsor.chat_room_id"
                             class="ms-auto badge text-bg-danger">Live
                         </span>
