--- a/addons/website_event_track/views/event_track_templates_list.xml
+++ b/addons/website_event_track/views/event_track_templates_list.xml
@@ -29,7 +29,7 @@
 <template id="session_topbar" name="Tracks Tools">
     <div>
         <div class="o_wesession_topbar_filters o_wevent_index_topbar_filters d-print-none d-flex flex-wrap align-items-center justify-content-end gap-2 w-100 mb-3">
-            <h3 class="my-0 me-auto pe-sm-4">Talks</h3>
+            <h3 class="mt-3 mb-3 me-auto pe-sm-4">Talks</h3>
             <!-- Optional wishlist filter -->
             <div t-if="option_track_wishlist" class="dropdown d-none d-lg-block">
                 <a href="#" role="button" class="btn btn-light dropdown-toggle" data-bs-toggle="dropdown">
@@ -250,7 +250,7 @@
                         </div>
                     </div>
                     <div class="d-flex flex-grow-1" t-elif="tracks_header_name">
-                        <span class="h1 m-0 fw-bold"
+                        <span class="h4 m-0"
                             t-out="tracks_header_name"/>
                     </div>
                     <a t-attf-class="my-auto align-self-start text-black {{ 'collapsed' if tracks_info['default_collapsed'] else '' }}"
