--- a/addons/website_event/views/event_templates_page_registration.xml
+++ b/addons/website_event/views/event_templates_page_registration.xml
@@ -351,7 +351,7 @@
             <div class="modal-content">
             <div class="modal-header">
                 <div class="o_wevent_registration_title modal-title fs-5" id="staticBackdropLabel">Tickets</div>
-                <div t-if="len(event.event_ticket_ids) &gt; 1" class="o_wevent_price_range ms-2"/>
+                <div t-if="len(event.event_ticket_ids) &gt; 2" class="o_wevent_price_range ms-2"/>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
 
@@ -374,10 +374,10 @@
                         </span>
                         <div id="o_wevent_tickets_collapse" class="modal-body collapse show">
                             <div t-foreach="tickets" t-as="ticket"
-                                class="d-flex justify-content-between o_wevent_ticket_selector"
+                                t-attf-class="d-flex justify-content-between o_wevent_ticket_selector mb-2 pb-2 {{not ticket_last and 'border-bottom' or ''}}"
                                 t-att-name="ticket.name">
                                 <div itemscope="itemscope" itemtype="http://schema.org/Offer">
-                                    <h5 itemprop="name" t-field="ticket.name" class="my-0"/>
+                                    <h5 itemprop="name" t-field="ticket.name" class="h6 my-0"/>
                                     <t t-if="ticket.description">
                                         <small t-field="ticket.description" class="text-muted py-2"/>
                                         <br/>
@@ -395,8 +395,8 @@
                                         (<span t-out="ticket.event_id.date_tz"/>)
                                     </small>
                                 </div>
-                                <div class="d-flex align-items-center justify-content-between p-0">
-                                    <div class="o_wevent_registration_multi_select flex-md-grow-1 me-2 text-end"/>
+                                <div class="d-flex flex-column flex-md-row align-items-center justify-content-between gap-2">
+                                    <div class="o_wevent_registration_multi_select flex-md-grow-1 text-end"/>
                                     <div class="ms-auto">
                                         <select t-if="not ticket.is_expired and ticket.sale_available"
                                             t-attf-name="nb_register-#{ticket.id}"
