[FIX] website_event_meet, website_event_track: badges readability
Address several design/ux issue related to badges. In some cases these
are too small, in other cases other informative components should be
used instead.

task-3698364

--- a/addons/website_event_meet/views/event_meet_templates_list.xml
+++ b/addons/website_event_meet/views/event_meet_templates_list.xml
@@ -142,7 +142,7 @@
                         <span t-if="meeting_room.target_audience" t-field="meeting_room.target_audience"/>
                         <span t-else="">participant(s)</span>
                     </p>
-                    <div class="badge text-bg-secondary" t-out="meeting_room.room_lang_id.name"/>
+                    <div class="badge px-3 py-2 text-bg-secondary" t-out="meeting_room.room_lang_id.name"/>
                 </div>
             </div>
         </div>
