--- a/addons/website_event_track/views/event_track_templates_list.xml
+++ b/addons/website_event_track/views/event_track_templates_list.xml
@@ -273,16 +273,16 @@
                                 <div t-if="tracks_date and today_tz &lt;= tracks_date"
                                     >
                                     <span t-if="track.is_track_live and not track.is_track_done"
-                                        class="badge text-bg-danger">Live</span>
-                                    <span t-elif="not track.is_track_done and track.is_track_soon">
+                                        class="alert alert-danger px-2 py-1">Live</span>
+                                    <span class="fw-bold" t-elif="not track.is_track_done and track.is_track_soon">
                                         <span t-out="track.track_start_remaining"
                                             t-options="{'widget': 'duration', 'digital': False, 'format': 'narrow',
                                                         'add_direction': True, 'unit': 'second', 'round': 'minute'}"/>
                                     </span>
-                                    <span t-elif="not track.is_track_done and not track.is_track_soon"
+                                    <span class="fw-bold" t-elif="not track.is_track_done and not track.is_track_soon"
                                         t-out="track.date"
                                         t-options="{'widget': 'datetime', 'time_only': True, 'format': 'short', 'tz_name': event.date_tz}"/>
-                                    <span t-else="" class="badge text-bg-info">Finished</span>
+                                    <span t-else="" class="alert alert-dark px-2 py-1 small">Finished</span>
                                 </div>
                                 <!-- reminder -->
                                 <div t-if="not event.is_done and (not track.date or today_tz &lt;= tracks_date) and option_track_wishlist"
@@ -458,23 +458,23 @@
             slug(event),
             keep_query('*', tags=str((search_tags - tag).ids if tag in search_tags else (tag | search_tags).ids))
         )"
-        t-att-class="'badge %s' % ('text-bg-primary' if tag in search_tags else 'o_tag_color_hovered_0')"
+        t-att-class="'badge px-3 py-2 text-decoration-none %s' % ('text-bg-primary' if tag in search_tags else 'o_tag_color_hovered_0')"
         t-out="tag.name"/>
     <a t-else=""
         t-att-href="'/event/%s/track?%s'% (
             slug(event),
             keep_query('*', tags=str(tag.ids))
         )"
-        t-att-class="'badge o_tag_color_hovered_%s' % (tag.color)"
+        t-att-class="'badge px-3 py-2 text-decoration-none o_tag_color_hovered_%s' % (tag.color)"
         t-out="tag.name"/>
 </template>
 
 <template id="track_tag_badge_info" name="Track: Tag Badge Info">
     <span t-if="search_tags"
-        t-att-class="'badge %s' % ('text-bg-primary' if tag in search_tags else 'o_tag_color_0')"
+        t-att-class="'badge px-3 py-2 %s' % ('text-bg-primary' if tag in search_tags else 'o_tag_color_0')"
         t-out="tag.name"/>
     <span t-else=""
-        t-att-class="'badge o_tag_color_%s' % (tag.color)"
+        t-att-class="'badge px-3 py-2 o_tag_color_%s' % (tag.color)"
         t-out="tag.name"/>
 </template>
 
