--- a/addons/website_event_track/views/event_track_templates_page.xml
+++ b/addons/website_event_track/views/event_track_templates_page.xml
@@ -81,7 +81,7 @@
                     <div class="d-flex flex-wrap gap-1">
                         <t t-foreach="track.tag_ids" t-as="tag">
                             <span t-if="tag.color"
-                                t-att-class="'badge o_tag_color_hovered_%s' % (tag.color)"
+                                t-att-class="'badge px-2 py-2 o_tag_color_hovered_%s' % (tag.color)"
                                 t-out="tag.name"/>
                         </t>
                     </div>
@@ -229,18 +229,18 @@
         <small class="text-muted" t-out="track_other.partner_name"/>
         <div class="d-inline-block o_wesession_track_aside_info text-truncate">
             <small t-if="not track_other.website_published and user_event_manager"
-                class="badge text-bg-danger">Unpublished</small>
+                class="badge text-bg-danger py-2 px-3">Unpublished</small>
             <small t-if="track_other.is_track_live and not track_other.is_track_done"
-                class="badge text-bg-danger">Live</small>
+                class="badge text-bg-danger py-2 px-3">Live</small>
             <small t-elif="track_other.is_track_done"
-                class="badge text-bg-light">Done</small>
+                class="badge text-bg-light py-2 px-3">Done</small>
             <small t-elif="track_other.is_track_today and track_other.track_start_remaining"
-                class="badge text-bg-secondary">
+                class="badge text-bg-secondary py-2 px-3">
                 <span t-out="track_other.track_start_remaining"
                     t-options="{'widget': 'duration', 'digital': False, 'add_direction': True,
                                 'unit': 'second', 'round': 'minute', 'format': 'narrow'}"/>
             </small>
-            <div t-elif="track_other.date" class="badge text-bg-light">
+            <div t-elif="track_other.date" class="badge py-2 px-3 text-bg-light">
                 <span t-out="track_other.date" t-options="{'widget': 'datetime', 'tz_name': track_other.event_id.date_tz, 'format': 'MMM. dd'}"/>
             </div>
         </div>
