--- a/addons/website_event_booth/static/src/scss/website_event_booth.scss
+++ b/addons/website_event_booth/static/src/scss/website_event_booth.scss
@@ -20,9 +20,11 @@ label.o_wbooth_category_unavailable {
         position: absolute;
     }
 
+    @if ($o-wevent-migration-layer == false) {
     & > input + div {
         opacity: .4;
         border: 3px solid $o-gray-600;
+    }
     }
 
     &:not(.o_wbooth_category_unavailable) > input + div {
@@ -35,7 +37,13 @@ label.o_wbooth_category_unavailable {
 
     & > input:checked + div,
     &:hover > input:checked + div {
+        @if $o-wevent-migration-layer {
+            --o-border-color: #{$primary};
+
+            box-shadow: 0 0 0 ($border-width * 2) $primary;
+        } @else {
         opacity: 1;
+        }
     }
 
     & img {
@@ -52,6 +60,23 @@ label.o_wbooth_category_unavailable {
         visibility: hidden;
         position: absolute;
     }
+
+    @if $o-wevent-migration-layer {
+        & > input + label {
+            padding: map-get($spacers, 2) map-get($spacers, 3);
+            border: $card-border-width solid $card-border-color;
+            border-radius: $btn-border-radius;
+            background: $card-bg;
+            color: $card-color;
+        }
+
+        & > input:checked + label,
+        &:hover > input:checked + label {
+            --o-border-color: #{$primary};
+
+             box-shadow: 0 0 0 ($border-width) $primary;
+        }
+    } @else {
     & > input + label {
         opacity: .4;
         padding: 1rem;
@@ -68,17 +93,19 @@ label.o_wbooth_category_unavailable {
         background-color: $o-gray-600;
         color: $o-white;
     }
-
+    } // end else
 }
 
 .o_wevent_booth_category {
     background-color: $o-wevent-bg-color-light;
 }
 
+@if ($o-wevent-migration-layer == false) {
 .o_wevent_booth_order_progress {
     li {
         &.o_current_stage {
             font-weight: bold;
         }
     }
+}
 }
