--- a/addons/l10n_hu_edi/views/res_config_settings_views.xml
+++ b/addons/l10n_hu_edi/views/res_config_settings_views.xml
@@ -2,7 +2,7 @@
 <odoo>
 
     <record id="res_config_settings_form_inherit_l10n_hu_edi" model="ir.ui.view">
-        <field name="name">res.config.settings.form.inherit.l10n.hu.edi</field>
+        <field name="name">res.config.settings.form.inherit.l10n_hu_edi</field>
         <field name="model">res.config.settings</field>
         <field name="inherit_id" ref="account.res_config_settings_view_form"/>
         <field name="arch" type="xml">
