--- a/addons/l10n_hu_edi/views/res_company.xml
+++ b/addons/l10n_hu_edi/views/res_company.xml
@@ -8,8 +8,7 @@
         <field name="arch" type="xml">
             <xpath expr="//field[@name='company_registry']" position="after">
                 <field name="l10n_hu_is_vat_group_member" attrs="{'invisible': [('country_code', '!=', 'HU')]}"/>
-                <field name="l10n_hu_vat_group_member" placeholder=""
-                    attrs="{'required': [('l10n_hu_is_vat_group_member','=',True)], 'invisible': [('l10n_hu_is_vat_group_member','=',False)]}"/>
+                <field name="l10n_hu_vat_group_number" placeholder="" attrs="{'required': [('l10n_hu_is_vat_group_member','=',True)], 'invisible': [('l10n_hu_is_vat_group_member','=',False)]}"/>
             </xpath>
         </field>
     </record>
