--- a/addons/mail/wizard/mail_activity_schedule_views.xml
+++ b/addons/mail/wizard/mail_activity_schedule_views.xml
@@ -65,7 +65,7 @@
                                 invisible="has_error or chaining_type == 'suggest'"
                                 class="btn-secondary" data-hotkey="z"
                                 context="{'mail_activity_quick_update': True}"/>
-                        <button string="Cancel" class="btn-secondary" special="cancel" data-hotkey="z"/>
+                        <button string="Cancel" class="btn-secondary" special="cancel" data-hotkey="x"/>
                     </footer>
                     <footer invisible="not plan_id">
                         <button name="action_schedule_plan" string="Schedule" type="object" class="btn-primary"
