--- a/addons/web/static/src/views/form/form_controller.scss
+++ b/addons/web/static/src/views/form/form_controller.scss
@@ -70,7 +70,7 @@
         opacity: 0.5;
     }
     .oe_inline, .o_field_widget.oe_inline > * {
-        width: auto!important;
+        width: 100% !important;
     }
     @for $i from 2 through 13 {
         .o_field_widget.o_input_#{$i}ch input{
